--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             <button id="btn-ajouter">Ajouter utilisateur</button>
         </div>
     </div>
-
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
