--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 
                     <label for="etat">Etat
                     </label>
-                    <input type="text" class="form-control" id="etat">
+                    <select name="etat" id="etat" class="form-control">
+                        <option value="Validé ">Validé</option>
+                        <option value="Rejeté ">Rejeté</option>
+                        <option value="En validation">En validation</option>
+                    </select>
                 </div>
                 <div class="form-group">
                 
