--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <label for="etat">Etat
                     </label>
                     <select name="etat" id="etat" class="form-control">
-                        <option value="Validé ">Validé</option>
-                        <option value="Rejeté ">Rejeté</option>
+                        <option value="Validé">Validé</option>
+                        <option value="Rejeté">Rejeté</option>
                         <option value="En validation">En validation</option>
                     </select>
                 </div>
@@ -59,7 +59,7 @@
 
                     <label for="matricule">Matricule
                     </label>
-                    <input type="text" class="form-control" id="matricule">
+                    <input type="number" class="form-control" id="matricule">
                     </div>
             </div>
             <div class="card-footer">
